WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281495
REGRESSION(
283414@main
): [WPE][GTK] Crash in ProcessLauncher socket monitor callback
https://bugs.webkit.org/show_bug.cgi?id=281495
Summary
REGRESSION(283414@main): [WPE][GTK] Crash in ProcessLauncher socket monitor c...
Michael Catanzaro
Reported
2024-10-15 08:16:12 PDT
The socket monitor callback that I added in
283414@main
accidentally deletes itself by calling m_socketMonitor.stop(). This causes the lambda capture to itself be deleted. On x86_64, it works due to luck prior to
https://github.com/WebKit/WebKit/pull/34133
, where I finally noticed and fixed it. But it crashes on at least aarch64 and ppc64le. I need to split the fix out of that pull request so it can land separately without depending on a bunch of unrelated changes.
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2024-10-16 06:21:32 PDT
***
Bug 281565
has been marked as a duplicate of this bug. ***
Michael Catanzaro
Comment 2
2024-10-16 06:22:23 PDT
There's a valgrind trace in
bug #281565
.
Michael Catanzaro
Comment 3
2024-10-16 11:23:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35297
Michael Catanzaro
Comment 4
2024-10-16 11:24:12 PDT
***
Bug 281038
has been marked as a duplicate of this bug. ***
Michael Catanzaro
Comment 5
2024-10-17 07:08:44 PDT
***
Bug 281666
has been marked as a duplicate of this bug. ***
EWS
Comment 6
2024-10-17 07:50:27 PDT
Committed
285339@main
(a28255d5d405): <
https://commits.webkit.org/285339@main
> Reviewed commits have been landed. Closing PR #35297 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug