REGRESSION(283414@main): [WPE][GTK] Crash in ProcessLauncher socket monitor callback https://bugs.webkit.org/show_bug.cgi?id=281495

Reviewed by Carlos Garcia Campos.

The socket monitor callback that I added in 283414@main accidentally
deletes itself by calling m_socketMonitor.stop(). This causes the lambda
capture to itself be deleted. We can change the socket monitor to wait
until the callback has finished before deleting it.

* Source/WTF/wtf/glib/GSocketMonitor.cpp:
(WTF::GSocketMonitor::~GSocketMonitor):
(WTF::GSocketMonitor::socketSourceCallback):
(WTF::GSocketMonitor::stop):

Canonical link: https://commits.webkit.org/285339@main